--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elooly - Chatlooly",
+  "name": "Chatlooly by elooly.com",
   "version": "0.0.1",
   "description": "Simple chat app to learn nodejs",
   "main": "chatterbox.js",
