--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "le_node": "^1.8.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "node-sass-middleware": "^0.11.0",
